# espanso-gui

./: pyproject.toml
espanso_gui/: __init__.py  model.py
test/resources/: static.yml
