[tool.poetry]
name = "espanso-gui"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
nicegui = "^1.2.14"
msgspec = "^0.15.0"
pythonnet = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
espanso-gui = "espanso-gui.espanso_gui:main"
